--- a/src/wow-global.css
+++ b/src/wow-global.css
@@ -18,3 +18,20 @@ body {
   font-style: oblique;
   font-size: 0.675em;
 }
+
+.wow-list-header {
+  /* background-color: #eee; */
+  background-color: #7d7d7d;
+  color: #fff;
+  padding: 0 16px;
+  margin: 1em 0 0.25em;
+}
+
+.wow-list-item {
+  margin-bottom: 0.5em;
+}
+
+.list-header--material.wow-list-header {
+  padding-top: 0;
+  margin-top: 0em;
+}
