fix: WOW-105 try to get Safari to allow attaching photos when tapping our inputs. Attempt 2

--- a/src/wow-global.css
+++ b/src/wow-global.css
@@ -14,6 +14,10 @@ body {
   text-align: right;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .small-text {
   font-style: oblique;
   font-size: 0.675em;
