feat: WOW-118 support displaying and editing multivalued obs fields

--- a/src/wow-global.scss
+++ b/src/wow-global.scss
@@ -54,3 +54,17 @@ body {
   flex-direction: row;
   padding-top: 0.5em;
 }
+
+.multiselect-container {
+  flex-direction: column;
+  align-items: start;
+}
+
+.multiselect-value {
+  margin: 0.7em 0;
+  display: flex;
+
+  .multiselect-question {
+    padding-left: 2em;
+  }
+}
