feat: WOW-53 allow create/edit/delete of comments

--- a/src/wow-global.scss
+++ b/src/wow-global.scss
@@ -71,5 +71,9 @@ body {
 .no-records-msg {
   color: #666;
   text-align: center;
-  line-height: 3em;
+  margin: 1.5em 1em;
+}
+
+.muted {
+  color: #888;
 }
