--- a/src/wow-global.scss
+++ b/src/wow-global.scss
@@ -77,3 +77,8 @@ body {
   font-size: 0.7em;
   margin-top: 0.5em;
 }
+
+.wow-radio-option-label {
+  flex-direction: column;
+  align-items: flex-start;
+}
