feat: add info box explaining coordinate accuracy

--- a/src/wow-global.scss
+++ b/src/wow-global.scss
@@ -82,3 +82,26 @@ body {
   flex-direction: column;
   align-items: flex-start;
 }
+
+.success-alert,
+.info-alert,
+.warning-alert {
+  padding: 1em;
+  border-radius: 10px;
+  margin: 0 auto;
+}
+
+.warning-alert {
+  border: 1px solid orange;
+  background: #ffeabb;
+}
+
+.success-alert {
+  border: 1px solid green;
+  background: #d5ffbf;
+}
+
+.info-alert {
+  border: 1px solid blue;
+  background: #e9f5ff;
+}
